[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "alibaba-sms"
authors = [
    {name = "Lin Zhiwen", email = "zhiwenlin1116@gmail.com"},
]
description = "Alibaba cloud SMS service SDK"
urls = {Homepage = "https://github.com/jayvynl/alibaba-sms"}
requires-python = ">=3.6"
keywords = ["ali", "alibaba", "cloud", "sms", "sdk"]
license = {text = "MIT"}
classifiers = [
        "Intended Audience :: Developers",
        "License :: OSI Approved :: MIT License",
        "Programming Language :: Python",
        "Programming Language :: Python :: 3",
        "Programming Language :: Python :: 3 :: Only",
        "Programming Language :: Python :: 3.6",
        "Programming Language :: Python :: 3.7",
        "Programming Language :: Python :: 3.8",
        "Programming Language :: Python :: 3.9",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3.11",
]
dependencies = [
    "requests",
]
dynamic = ["version", "readme"]

[tool.setuptools.dynamic]
version = {attr = "alibaba_sms.VERSION"}
readme = {file = ["README.md"], content-type = "text/markdown"}
